--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
                 <input type="text" name="taste" value="" placeholder="taste">
                 <input type="submit" name="submit" value="Submit">
             </form>
+            <div class="submitted-message window-content">
+                <p>Message received!</p>
+            </div>
         </div>
         <ul class="memories">
 
