--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                 <input type="submit" name="submit" value="Submit">
             </form>
             <div class="submitted-message window-content">
-                <p>Message received!</p>
+                <p>Memory received!</p>
             </div>
         </div>
         <ul class="memories">
