🙍🐚 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>out of memory</h1>
-      <a href="https://github.com/theflorencefu/memories/blob/master/README.md"target="_blank">artist's statement</a>
+        <a href="https://github.com/theflorencefu/memories/blob/master/README.md"target="_blank">artist statement</a>
         <div class="form-window window">
             <div class="bar">
                 <span class="close"><img src="/assets/close.svg" alt=""></span>
