👬🍛 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         </ul>
       
         <div class="instructions">
-          <p>instructions: here’s your opportunity to get something off your chest, to pause, reflect and remember. feel free to record your memory in any way you choose. if something doesn't apply or if you can't remember, leave it blank. the only thing I ask of you is to give your memory a title.</p> 
+          <p>instructions: here’s your opportunity to get something off your chest, to pause, reflect and remember. feel free to record your memory in any way you choose. if something doesn't apply or if you can't remember, leave it blank. the only thing i ask of you is to give your memory a title.</p> 
             
           <p>
             thanks <3
